--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "ejs": "^3.1.6",
     "gridfs-stream": "^1.1.1",
+    "jwt-decode": "^3.1.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^6.2.2",
@@ -27,6 +28,7 @@
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux-thunk": "^2.4.1",
