--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-ATLAS_URI=mongodb+srv://mbulelo:voyager123@mbulelo.eu7nw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+REACT_APP_PORT=5000
+REACT_APP_ATLAS_URI=mongodb+srv://mbulelo:voyager123@mbulelo.eu7nw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+JWT_SECRET = abc123
